apply plugin: 'com.android.library'
apply plugin: 'com.neenbedankt.android-apt'
apply plugin: 'me.tatarka.retrolambda'

android {
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    compileSdkVersion 24
    buildToolsVersion '24.0.0'

    defaultConfig {
        minSdkVersion 11
        targetSdkVersion 24
        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
    }
}

dependencies {
    compile "com.android.support:support-v4:$supportLibVersion"
    compile "com.android.support:support-annotations:$supportLibVersion"
    compile 'com.annimon:stream:1.0.9'
    compile 'joda-time:joda-time:2.9.4'

    compile "org.parceler:parceler-api:$parcelerVersion"
    apt "org.parceler:parceler:$parcelerVersion"

    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$dbFlowVersion"
    compile "com.github.Raizlabs.DBFlow:dbflow-core:$dbFlowVersion"
    compile "com.github.Raizlabs.DBFlow:dbflow:$dbFlowVersion"

    compile 'frankiesardo:icepick:3.2.0'
    provided 'frankiesardo:icepick-processor:3.2.0'

    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:1.9.5'
    androidTestCompile "com.android.support.test:runner:$testSupportLibVersion"
}